tests/lib_2/html/websql_static_test.dart
// Copyright (c) 2021, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

// @dart = 2.9

import 'dart:web_sql';
//     ^^^^^^^^^^^^^^
// [analyzer] COMPILE_TIME_ERROR.URI_DOES_NOT_EXIST
// [cfe] Not found: 'dart:web_sql'

void main() {}
